# case-agent-restaurante

./: .gitignore
dionisio-agent/: .env.example  .gitignore  DEMO.md  README.md  pyproject.toml
dionisio-agent/agent/: __init__.py  calculator.py  core.py  executor.py  llm.py  phrasing.py  planner.py  responder.py  state.py
dionisio-agent/client/: __init__.py  dionisio.py  schemas.py
dionisio-agent/rag/: __init__.py  embeddings.py  indexer.py  openapi_spec.json  retriever.py
dionisio-agent/rag/docs/Ajuda/: 01_FAQ.md
dionisio-agent/rag/docs/Clientes e Fidelidade/: 01_Clientes.md  02_Pos_Venda.md  03_Cupons.md  04_Satisfação.md
dionisio-agent/rag/docs/Comunicação/: 01_WhatsApp.md  02_Instagram.md  03_Links.md
dionisio-agent/rag/docs/Configurações/: 01_Configuracao_de_IA.md  02_Configuracao_de_Entrega.md  03_Horarios.md  (+3 more)
dionisio-agent/safety/: __init__.py  ambiguity.py  destructive.py
dionisio-agent/scripts/: agent_cli.py  build_index.py  coverage_check.py  safety_check.py  smoke_test.py  tasks_check.py
dionisio-agent/tests/: __init__.py  conftest.py  test_day6.py  test_reachability.py  test_reliability.py  test_tasks.py  test_write_schema.py
dionisio-agent/tests/fixtures/: analytics_topitems.json  clients_inactive.json  clients_insights_ana.json  clients_insights_bruno.json  clients_insights_carla.json  clients_search_joao.json  clients_topspenders.json  coupons_assigngroup.json  coupons_create.json  orders_list_risoto.json  reservations_availability_sat.json  reservations_list_joao.json  reservations_list_today.json  reservations_reschedule.json
(+6 files in other folders)
