[project]
name = "dionisio-agent"
version = "0.1.0"
description = "Agente assistente interno do Dionisio (CRM de restaurantes) — Dia 1: client + RAG"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "chromadb>=0.5",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tenacity>=8.0",
    "sentence-transformers>=3.0",  # embeddings locais multilingue (PT)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client", "rag", "agent"]
